Use default scala compile setting