@@ -34,26 +34,10 @@ dependencies {
     testCompile "org.embulk:embulk-test:0.9.23"
 }
 
-compileScala {
-    scalaCompileOptions.metaClass.useCompileDaemon = true
-}
-
 spotless {
     scala {
         scalafmt('2.3.2').configFile('.scalafmt.conf')
     }
-}
-
-tasks.withType(ScalaCompile) {
-    configure(scalaCompileOptions.forkOptions) {
-        memoryMaximumSize = '1g'
-        jvmArgs = ['-XX:MaxPermSize=1024m']
-    }
-}
-
-// Activating the Zinc based compiler
-tasks.withType(ScalaCompile) {
-    scalaCompileOptions.metaClass.useAnt = false
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
